We can crud on user with no security role. next step add admin and secure

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Créer un compte{% endblock %}
+{% block title %}Register{% endblock %}
 
 {% block body %}
+    <h1>Register</h1>
 
 {% endblock %}
