--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,4 +4,8 @@
 
 {% block body %}
 
+    {% for user in users %}
+        {% include 'user/_delete_form.html.twig' %}
+    {% endfor %}
+
 {% endblock %}
