--- a/templates/artist/edit.html.twig
+++ b/templates/artist/edit.html.twig
@@ -11,11 +11,8 @@
     <div id="user-form" class="d-flex flex-column align-items-center m-5">
         <div class="form-row w-50">
             <div class="form-group">
-                {{ form_row(form.nickname) }}
+                {{ form_row(form.description) }}
             </div>
-        </div>
-        <div class="d-flex justify-content-center">
-            <input type="submit" class="btn btn-primary mt-4" value="Valider" />
         </div>
     </div>
     {{ form_end(form) }}
