--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -9,8 +9,9 @@
             <div class="col-8 d-flex justify-content-between">
                 {% for user in users %}
                     <p>{{ user.nickName }}</p>
-                    <a class="btn btn-primary" href="{{ path('artist_edit', {id:user.id}) }}">become an artist</a>
-                    {% include 'user/_delete_form.html.twig' %}
+                    {% if is_granted('ROLE_ADMIN') %}
+                        {% include 'user/_delete_form.html.twig' %}
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
