--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Confirmez-vous la suppression de cet utilisateur ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('_delete' ~ user.id) }}">
-    <button class="btn btn-secondary text-white">Supprimer</button>
+    <button class="btn btn-secondary text-white mt-4">Supprimer</button>
 </form>
