Finish crud on artist

--- a/templates/admin/adminArtistType.html.twig
+++ b/templates/admin/adminArtistType.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification de compte{% endblock %}
+{% block title %}Création d'un artiste{% endblock %}
 
 {% block body %}
 
-    <h1 class="text-primary text-center">Modifier le compte</h1>
+    <h1 class="text-primary text-center">Créer un artiste</h1>
     {{ form_start(form) }}
 
     <div id="user-form" class="d-flex flex-column align-items-center m-5">
