--- a/templates/artist/edit.html.twig
+++ b/templates/artist/edit.html.twig
@@ -3,7 +3,6 @@
 {% block title %}Modification de compte{% endblock %}
 
 {% block body %}
-    {{ include('user/_delete_form.html.twig') }}
 
     <h1 class="text-primary text-center">Modifier le compte</h1>
     {{ form_start(form) }}
@@ -13,6 +12,15 @@
             <div class="form-group">
                 {{ form_row(form.description) }}
             </div>
+        </div>
+        <div class="form-row w-50">
+            <div class="form-group">
+                {{ form_row(form.nickname) }}
+            </div>
+        </div>
+        {{ form_row(form._token) }}
+        <div class="d-flex justify-content-center">
+            <input type="submit" class="btn btn-primary mt-4" value="Valider"/>
         </div>
     </div>
     {{ form_end(form) }}
