--- a/templates/artCard/edit.html.twig
+++ b/templates/artCard/edit.html.twig
@@ -1,21 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification de compte{% endblock %}
+{% block title %}Modification d'art card{% endblock %}
 
 {% block body %}
 
-    <h1 class="text-primary text-center">Modifier le compte</h1>
+    <h1 class="text-primary text-center">Modifier l'art card</h1>
     {{ form_start(form) }}
 
     <div id="user-form" class="d-flex flex-column align-items-center m-5">
         <div class="form-row w-50">
             <div class="form-group">
-                {{ form_row(form.nickname) }}
-            </div>
-        </div>
-        <div class="form-row w-50">
-            <div class="form-group">
-                {{ form_row(form.email) }}
+                {{ form_row(form.title) }}
             </div>
         </div>
         <div class="form-row w-50">
@@ -23,11 +18,15 @@
                 {{ form_row(form.description) }}
             </div>
         </div>
-        {{ form_row(form._token) }}
+        <div class="form-row w-50">
+            <div class="form-group">
+                {{ form_row(form.city) }}
+            </div>
+        </div>
         <div class="d-flex justify-content-center">
-            <input type="submit" class="btn btn-primary mt-4" value="Valider"/>
-            {{ include('artCard/_delete_form.html.twig') }}
+            <input type="submit" class="btn btn-primary mt-4" value="Valider" />
         </div>
     </div>
+    {{ form_row(form._token) }}
     {{ form_end(form) }}
 {% endblock %}
