--- a/templates/admin/artistModifyType.html.twig
+++ b/templates/admin/artistModifyType.html.twig
@@ -1,33 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification de compte{% endblock %}
+{% block title %}Modification d'un artiste{% endblock %}
 
 {% block body %}
-
-    <h1 class="text-primary text-center">Modifier le compte</h1>
-    {{ form_start(form) }}
-
-    <div id="user-form" class="d-flex flex-column align-items-center m-5">
-        <div class="form-row w-50">
-            <div class="form-group">
-                {{ form_row(form.nickname) }}
+    <div class="container h-75">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                <div class="card-artistType card">
+                    <div class="card-body p-5">
+                        <h2 class="text-uppercase text-center m-2">Créer un compte Artiste</h2>
+                        {{ form_start(form) }}
+                        <div class="form-outline mb-4">
+                            {{ form_row(form.nickname) }}
+                        </div>
+                        <div class="form-outline mb-4">
+                            {{ form_row(form.email) }}
+                        </div>
+                        <div class="form-outline mb-4">
+                            {{ form_row(form.urlProfilPicture) }}
+                        </div>
+                        <div class="form-outline mb-4">
+                            {{ form_row(form.description) }}
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="form-control btn btn-outline-success submit px-3" value="Valider">
+                                Modififer
+                            </button>
+                        </div>
+                        {{ form_end(form) }}
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-row w-50">
-            <div class="form-group">
-                {{ form_row(form.email) }}
-            </div>
-        </div>
-        <div class="form-row w-50">
-            <div class="form-group">
-                {{ form_row(form.description) }}
-            </div>
-        </div>
-        {{ form_row(form._token) }}
-        <div class="d-flex justify-content-center">
-            <input type="submit" class="btn btn-primary mt-4" value="Valider"/>
-            {{ include('artCard/_delete_form.html.twig') }}
         </div>
     </div>
-    {{ form_end(form) }}
 {% endblock %}
