--- a/templates/admin/artistModifyType.html.twig
+++ b/templates/admin/artistModifyType.html.twig
@@ -26,7 +26,7 @@
         {{ form_row(form._token) }}
         <div class="d-flex justify-content-center">
             <input type="submit" class="btn btn-primary mt-4" value="Valider"/>
-            {{ include('artCard/_delete_form.html.twig') }}
+            {{ include('user/_delete_form.html.twig') }}
         </div>
     </div>
     {{ form_end(form) }}
