--- a/templates/artist/index.html.twig
+++ b/templates/artist/index.html.twig
@@ -3,24 +3,28 @@
 {% block title %}Liste des artistes{% endblock %}
 
 {% block body %}
-
-    <div class="container container-lg">
-        <div class="row justify-content-start">
+    <div class="container-fluid container-lg mt-3">
+        <div class="row justify-content-center">
             {% for artist in artists %}
-                <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-2 p-lg-4">
-                    <div class="card-header bg-black">
-                    <img class=" img-fluid img-thumbnail"
-                         src="{{ artist.urlProfilPicture }}"/>
-                    </div>
-                    <div class="mt-2 card-body">
+                <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-1 p-lg-2">
+                    <img class="card-img img-fluid img-thumbnail bg-black"
+                         src="{{ artist.urlProfilPicture }}" alt="This is the profil picture of an artist"/>
+                    <div class="mt-1 card-body">
                         <h1 class="card-title m-0 text-center">{{ artist.nickName }}</h1>
+                        <div class="d-flex justify-content-around">
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <a href="{{ path('admin_edit_artist', {'id': artist.id}) }}"
+                                   class="btn btn-success text-white">Edit</a>
+                                <form method="post" action="{{ path('user_delete', {'id': artist.id}) }}"
+                                      onsubmit="return confirm('Confirmez-vous la suppression de cet artiste ?');">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('_delete' ~ artist.id) }}">
+                                    <button class="btn btn-danger text-white">delete</button>
+                                </form>
+                            {% endif %}
+                        </div>
                     </div>
-                    {% if is_granted('ROLE_ADMIN') %}
-                    <a href="{{ path('admin_edit_artist', {'id': artist.id}) }}" class="btn btn-primary mb-1">Edit</a>
-                    {% endif %}
                 </div>
             {% endfor %}
         </div>
     </div>
-
 {% endblock %}
