--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -20,15 +20,15 @@
                 <ul class="navbar-nav flex-grow-1 pe-3">
                     {% if app.user %}
                         {% if is_granted('ROLE_ADMIN') %}
-                            <h4 class="text-center">Géstion admin</h4>
+                            <h4 class="text-center">Gestion admin</h4>
                             <li class="nav-item text-center pt-2">
                                 <a class="nav-link" href="#">Nouveaux pings</a>
                             </li>
                             <li class="nav-item text-center">
-                                <a class="nav-link" href="#">Géstion utilisateur</a>
+                                <a class="nav-link" href="#">Gestion utilisateurs</a>
                             </li>
                             <li class="nav-item text-center pb-3 border-bottom">
-                                <a class="nav-link" href="#">Géstion artiste</a>
+                                <a class="nav-link" href="#">Gestion artistes</a>
                             </li>
                         {% endif %}
                         {% if is_granted('ROLE_USER') or is_granted('ROLE_ARTIST') or is_granted('ROLE_ADMIN') %}
@@ -42,10 +42,10 @@
                         {% endif %}
                     {% endif %}
                     <li class="nav-item text-center pt-3">
-                        <a class="nav-link" aria-current="page" href="#">Acceuil</a>
+                        <a class="nav-link" aria-current="page" href="#">Accueil</a>
                     </li>
                     <li class="nav-item text-center">
-                        <a class="nav-link" href="#">Artist</a>
+                        <a class="nav-link" href="#">Artistes</a>
                     </li>
                     <li class="nav-item text-center">
                         <a class="nav-link" href="#">Carte</a>
