Add new style for artist form type

--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -33,11 +33,18 @@ ul {
   margin: 0;
 }
 
+form label {
+  font-size: 1rem;
+}
+
 /* ---------- FORM ADMIN ARTIST CREATE ---------- */
 
-.card-artistType {
-  border-radius: 15px;
-  box-shadow: var(--box-shadow);
+.card-register {
+  border-radius: 1.6rem;
+}
+
+.description-artistType {
+  font-size: 0.8rem;
 }
 
 .area-artisteType {
