--- a/templates/admin/adminArtistType.html.twig
+++ b/templates/admin/adminArtistType.html.twig
@@ -3,37 +3,39 @@
 {% block title %}Création d'un artiste{% endblock %}
 
 {% block body %}
-    <div class="container h-75">
+    <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-                <div class="card-artistType card">
-                    <div class="card-body p-5">
-                        <h2 class="text-uppercase text-center m-2">Créer un compte Artiste</h2>
+            <div class="col-12 col-md-8">
+                <div class="card-register card bg-dark text-white">
+                    <div class="card-body p-5 text-center">
+                        <div class="mmt-md-4">
                             {{ form_start(form) }}
-                            <div class="form-outline mb-4">
+                            <h2 class="fw-bold mb-2 text-uppercase">Créer un compte Artiste</h2>
+                            <p class="description-artistType text-white-50 mb-5">Seul la description n'est pas obligatoire.</p>
+                            <div class="form-outline form-white mb-4">
                                 {{ form_row(form.nickname) }}
                             </div>
-                            <div class="form-outline mb-4">
+                            <div class="form-outline form-white mb-4">
                                 {{ form_row(form.email) }}
                             </div>
-                            <div class="form-outline mb-4">
+                            <div class="form-outline form-white mb-4">
                                 {{ form_row(form.password) }}
                             </div>
-                        <div class="form-outline mb-4">
-                            {{ form_row(form.urlProfilPicture) }}
-                        </div>
-                            <div class="form-outline mb-4">
+                            <div class="form-outline form-white mb-4">
+                                {{ form_row(form.urlProfilPicture) }}
+                            </div>
+                            <div class="form-outline form-white mb-4">
                                 {{ form_row(form.description) }}
                             </div>
-                            <div class="d-flex justify-content-center">
-                                <button type="submit" class="form-control btn btn-outline-success submit px-3" value="Valider">
-                                    Créer
-                                </button>
-                            </div>
-                            {{ form_end(form) }}
+                            <button type="submit" class="btn btn-outline-light btn-lg px-5"
+                                    value="Valider">
+                                Créer
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
+
