add design style for form login

--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -43,3 +43,9 @@ ul {
 .area-artisteType {
   height: 10em;
 }
+
+/* ---------- FORM LOGIN ---------- */
+
+.form-login {
+  border-radius: 1.6rem;
+}
