resolution of the problem of non-existent property. double tap on the m key.

--- a/templates/admin/artistModifyType.html.twig
+++ b/templates/admin/artistModifyType.html.twig
@@ -8,7 +8,7 @@
             <div class="col-12 col-md-8">
                 <div class="card-register card bg-dark text-white">
                     <div class="card-body p-5 text-center">
-                        <div class="mmt-md-4">
+                        <div class="mt-md-4">
                             {{ form_start(form) }}
                             <h2 class="fw-bold mb-2 text-uppercase">Modifier un compte Artiste</h2>
                             <div class="form-outline form-white mb-4">
