--- a/templates/admin/adminArtistType.html.twig
+++ b/templates/admin/adminArtistType.html.twig
@@ -8,7 +8,7 @@
             <div class="col-12 col-md-8">
                 <div class="card-register card bg-dark text-white">
                     <div class="card-body p-5 text-center">
-                        <div class="mmt-md-4">
+                        <div class="mt-md-4">
                             {{ form_start(form) }}
                             <h2 class="fw-bold mb-2 text-uppercase">Créer un compte Artiste</h2>
                             <p class="description-artistType text-white-50 mb-5">Seul la description n'est pas obligatoire.</p>
