--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,23 +1,28 @@
-{{ form_start(form) }}
-
-<div id="user-form" class="d-flex flex-column align-items-center m-5">
-    <div class="form-row w-50">
-        <div class="form-group">
-            {{ form_row(form.email) }}
+<div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8">
+            <div class="card-register card bg-dark text-white">
+                <div class="card-body p-5 text-center">
+                    <div class="mt-md-4">
+                        {{ form_start(form) }}
+                        <h2 class="fw-bold mb-2 text-uppercase">Créer un compte</h2>
+                        <div class="form-outline form-white mb-4">
+                            {{ form_row(form.nickname) }}
+                        </div>
+                        <div class="form-outline form-white mb-4">
+                            {{ form_row(form.email) }}
+                        </div>
+                        <div class="form-outline form-white mb-4">
+                            {{ form_row(form.password) }}
+                        </div>
+                        <button type="submit" class="btn btn-outline-light btn-lg px-5"
+                                value="Valider">
+                            Créer
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="form-row w-50">
-        <div class="form-group">
-            {{ form_row(form.nickname) }}
-        </div>
-    </div>
-    <div class="form-row w-50">
-        <div class="form-group">
-            {{ form_row(form.password) }}
-        </div>
-    </div>
-    <div class="d-flex justify-content-center">
-        <input type="submit" class="btn btn-primary mt-4" value="Valider" />
     </div>
 </div>
 {{ form_end(form) }}
