--- a/templates/admin/artistModifyType.html.twig
+++ b/templates/admin/artistModifyType.html.twig
@@ -27,6 +27,7 @@
                                     value="Valider">
                                 Modifier
                             </button>
+                            {{ form_end(form) }}
                         </div>
                     </div>
                 </div>
