--- a/templates/admin/userModifyType.html.twig
+++ b/templates/admin/userModifyType.html.twig
@@ -1,33 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modification de compte{% endblock %}
+{% block title %}Modification d'un utilisateur{% endblock %}
 
 {% block body %}
-
-    <h1 class="text-primary text-center">Modifier le compte</h1>
-    {{ form_start(form) }}
-
-    <div id="user-form" class="d-flex flex-column align-items-center m-5">
-        <div class="form-row w-50">
-            <div class="form-group">
-                {{ form_row(form.nickname) }}
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-8">
+                <div class="card-register card bg-dark text-white">
+                    <div class="card-body p-5 text-center">
+                        <div class="mt-md-4">
+                            {{ form_start(form) }}
+                            <h2 class="fw-bold mb-2 text-uppercase">Modifier un compte utilisateur</h2>
+                            <div class="form-outline form-white mb-4">
+                                {{ form_row(form.nickname) }}
+                            </div>
+                            <div class="form-outline form-white mb-4">
+                                {{ form_row(form.email) }}
+                            </div>
+                            <button type="submit" class="btn btn-outline-light btn-lg px-5"
+                                    value="Valider">
+                                Modifier
+                            </button>
+                            {{ form_end(form) }}
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-row w-50">
-            <div class="form-group">
-                {{ form_row(form.email) }}
-            </div>
-        </div>
-        <div class="form-row w-50">
-            <div class="form-group">
-                {{ form_row(form.roles) }}
-            </div>
-        </div>
-        {{ form_row(form._token) }}
-        <div class="d-flex justify-content-center">
-            <input type="submit" class="btn btn-primary mt-4" value="Valider"/>
-            {{ include('user/_delete_form.html.twig') }}
         </div>
     </div>
-    {{ form_end(form) }}
 {% endblock %}
