new function findUserByRole. Add css for list of user

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,16 +4,26 @@
 
 {% block body %}
 
-    <div class="container-fluid">
+    <div class="container-fluid container-lg mt-3">
         <div class="row justify-content-center">
-            <div class="col-8 d-flex justify-content-between">
-                {% for user in users %}
-                    <p>{{ user.nickName }}</p>
-                    {% if is_granted('ROLE_ADMIN') %}
-                        {% include 'user/_delete_form.html.twig' %}
-                    {% endif %}
-                {% endfor %}
-            </div>
+            {% for user in users %}
+                <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-1 p-lg-2">
+                    <img class="card-img img-fluid img-thumbnail bg-black"
+                         src="https://via.placeholder.com/300" alt="This is a place holder"/>
+                    <div class="mt-1 card-body">
+                        <h1 class="card-title m-0 text-center">{{ user.nickName }}</h1>
+                        <div class="d-flex justify-content-around">
+                                <a href="{{ path('admin_edit_user', {'id': user.id}) }}"
+                                   class="btn btn-success text-white">Edit</a>
+                                <form method="post" action="{{ path('user_delete', {'id': user.id}) }}"
+                                      onsubmit="return confirm('Confirmez-vous la suppression de cet utilisateur ?');">
+                                    <input type="hidden" name="_token" value="{{ csrf_token('_delete' ~ user.id) }}">
+                                    <button class="btn btn-danger text-white">delete</button>
+                                </form>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
