--- a/templates/artCard/edit.html.twig
+++ b/templates/artCard/edit.html.twig
@@ -24,7 +24,7 @@
                                     {{ form_row(form.city) }}
                                 </div>
                                 {{ form_row(form._token) }}
-                                <button type="submit" class="btn btn-outline-light btn-lg px-5"
+                                <button type="submit" class="btn btn-outlinve-light btn-lg px-5"
                                         value="Valider">
                                     Modifier
                                 </button>
