--- a/templates/artCard/index.html.twig
+++ b/templates/artCard/index.html.twig
@@ -8,6 +8,8 @@
         <div class="row justify-content-center">
             {% for artCard in artCards %}
                 <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-1 p-lg-2">
+                    <img class="card-img img-fluid img-thumbnail bg-black"
+                         src="{{ artCard.pictureArt }}" alt="This is the profil picture of an artist"/>
                     <div class="mt-1 card-body">
                         <h1 class="card-title m-0 text-center">{{ artCard.title }}</h1>
                         <div class="d-flex justify-content-around">
