--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -33,8 +33,8 @@
                         {% endif %}
                         {% if is_granted('ROLE_USER') or is_granted('ROLE_ARTIST') or is_granted('ROLE_ADMIN') %}
                             <h4 class="text-center pt-3">Mon compte</h4>
-                            <li class="nav-item text-center pt-2">
-                                <a class="nav-link" href="#">Mon profil</a>
+                            <li class="nav-item text-center pt-3">
+                                <a class="nav-link" aria-current="page" href="{{ path('user_show') }}">Mon profil</a>
                             </li>
                             <li class="nav-item text-center border-bottom pb-3">
                                 <a class="nav-link" href="#">Mes pings</a>
