--- a/templates/artCard/show.html.twig
+++ b/templates/artCard/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="container min-vh-75">
         <div class="row">
             <div class="col">
                 <div class="card float-right">
@@ -12,11 +12,14 @@
                         <div class="col-sm-5">
                             <img class="d-block w-100" src="https://picsum.photos/150?image=641" alt="">
                         </div>
-                        <div class="col-sm-7">
-                            <div class="card-block">
-                                <h1 class="card-title">{{ artCard.title }}</h1>
-                                <p>{{ artCard.description }}</p>
-                                <p>{{ artCard.city }}</p>
+                        <div class="col-sm-7 d-flex">
+                            <div class="card-block d-flex flex-column justify-content-between align-content-between">
+                                <h1 class="show-card-title card-title text-center">{{ artCard.title }}</h1>
+                                <p class="show-card-description">{{ artCard.description }}</p>
+                                <div class="d-flex justify-content-between">
+                                <p class="show-card-city">{{ artCard.city }}</p>
+                                <p class="show-card-user">{{ artCard.user.nickname }}</p>
+                                </div>
                                 <div class="d-flex justify-content-around mb-2">
                                     <a href="#" class="btn btn-success btn-sm">Valider</a>
                                     <a href="#" class="btn btn-primary btn-sm">Editer</a>
