add css height and margin bottom

--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark h-25" aria-label="Dark offcanvas navbar">
+<nav class="navbar navbar-dark bg-dark" aria-label="Dark offcanvas navbar">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarDark"
                 aria-controls="offcanvasNavbarDark">
