--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -41,6 +41,13 @@ form label {
   font-size: 1rem;
 }
 
+/* ---------- NAV BAR ---------- */
+
+.navbar {
+  height: 5rem;
+  margin-bottom: 1rem;
+}
+
 /* ---------- FORM ADMIN ARTIST CREATE ---------- */
 
 .card-register {
