add detail card view

--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -81,6 +81,10 @@ form label {
 
 /* ---------- CARD DETAIL  ---------- */
 
+.show-card-detail {
+  margin-top: 6rem;
+}
+
 .show-card-title {
   font-size: 1.3rem;
 }
