--- a/templates/artCard/show.html.twig
+++ b/templates/artCard/show.html.twig
@@ -17,16 +17,22 @@
                                 <h1 class="show-card-title card-title text-center">{{ artCard.title }}</h1>
                                 <p class="show-card-description">{{ artCard.description }}</p>
                                 <div class="d-flex justify-content-between">
-                                <p class="show-card-city">{{ artCard.city }}</p>
-                                <p class="show-card-user">{{ artCard.user.nickname }}</p>
+                                    <p class="show-card-city">{{ artCard.city }}</p>
+                                    <p class="show-card-user">{{ artCard.user.nickname }}</p>
                                 </div>
                                 <div class="d-flex justify-content-around mb-2">
-                                    <a href="#" class="btn btn-success">Valider</a>
+                                    <form method="post" action="{{ path('artCard_validate', {'id': artCard.id}) }}"
+                                          onsubmit="return confirm('Confirmez-vous la validation de cette oeuvre ?');">
+                                        <input type="hidden" name="_token"
+                                               value="{{ csrf_token('_validate' ~ artCard.id) }}">
+                                        <button class="btn btn-success text-white">Validate</button>
+                                    </form>
                                     <a href="{{ path('artCard_edit', {'id': artCard.id}) }}" class="btn btn-primary">Editer</a>
                                     <form method="post" action="{{ path('artCard_delete', {'id': artCard.id}) }}"
                                           onsubmit="return confirm('Confirmez-vous la suppression de cette oeuvre ?');">
-                                        <input type="hidden" name="_token" value="{{ csrf_token('_delete' ~ artCard.id) }}">
-                                        <button class="btn btn-danger text-white">delete</button>
+                                        <input type="hidden" name="_token"
+                                               value="{{ csrf_token('_delete' ~ artCard.id) }}">
+                                        <button class="btn btn-danger text-white">Delete</button>
                                     </form>
                                 </div>
                             </div>
