--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,18 +3,49 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/ludovic/PhpstormProjects/localart/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/ludovic/PhpstormProjects/localart/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="container-fluid bg-primary">
+        <div class="row">
+            <div class="col-12 d-flex">
+                <div>
+                    <div class="show-card-detail card float-right m-0 h-100">
+                        <div class="row">
+                            <div class="col-12">
+                                <img class="d-block w-100" src="https://picsum.photos/150?image=641" alt="">
+                            </div>
+                            <div class="d-flex">
+                                <div class="card-block d-flex flex-column justify-content-between align-content-between">
+                                    <h1 class="show-card-title card-title text-center">{{ artCard.title }}</h1>
+                                    <p class="show-card-description">{{ artCard.description }}</p>
+                                    <div class="d-flex justify-content-between">
+                                        <p class="show-card-city">{{ artCard.city }}</p>
+                                        <p class="show-card-user">{{ artCard.user.nickname }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex flex-column">
+                    <div>
+                        <img src="https://baconmockup.com/500/500">
+                    </div>
+                    <div class="d-flex flex-row">
+                        {% for artCard in artCards %}
+                            <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-1 p-lg-2">
+                                <img class="card-img img-fluid img-thumbnail bg-black"
+                                     src="{{ artCard.pictureArt }}" alt="This is the profil picture of an artist"/>
+                                <div class="mt-1 card-body">
+                                    <h1 class="card-title m-0 text-center">{{ artCard.title }}</h1>
+                                    <div class="d-flex justify-content-around">
+                                        <a href="{{ path('artCard_show', {'id': artCard.id}) }}"
+                                           class="btn btn-success text-white">Voir Plus</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
