--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,17 +3,17 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <div class="container-fluid bg-primary">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12 d-flex">
                 <div>
-                    <div class="show-card-detail card float-right m-0 h-100">
+                    <div class="show-card-detail d-flex align-items-center card float-right m-0 ">
                         <div class="row">
                             <div class="col-12">
                                 <img class="d-block w-100" src="https://picsum.photos/150?image=641" alt="">
                             </div>
                             <div class="d-flex">
-                                <div class="card-block d-flex flex-column justify-content-between align-content-between">
+                                <div class="card-block d-flex flex-column">
                                     <h1 class="show-card-title card-title text-center">{{ artCard.title }}</h1>
                                     <p class="show-card-description">{{ artCard.description }}</p>
                                     <div class="d-flex justify-content-between">
@@ -25,9 +25,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex flex-column">
+                <div class="d-flex flex-column align-items-center">
                     <div>
-                        <img src="https://baconmockup.com/500/500">
+                        <img src="https://baconmockup.com/1400/500/">
                     </div>
                     <div class="d-flex flex-row">
                         {% for artCard in artCards %}
