--- a/assets/styles/_styles.scss
+++ b/assets/styles/_styles.scss
@@ -2,8 +2,8 @@
 :root {
   --box-shadow: 0px 6px 9px 0px rgb(0 0 0 / 15%);
   --box-shadow-nav: rgb(0 0 0 / 22%) 0px 2 18px 0px;
-  --text-color: #444;
-  --background: #efefef;
+  --text-color: white;
+--background: #272727f5;
 }
 
 /* ---------- FONTS ---------- */
@@ -25,6 +25,7 @@ body {
   font-size: 10px;
   color: var(--text-color);
   background-color: var(--background);
+  text-align: justify;
 }
 
 ul, li {
@@ -50,6 +51,32 @@ form label {
 
 .nav-link {
   font-size: 1.3rem;
+}
+
+/* ---------- HOME PAGE ---------- */
+
+.art-homepage {
+  width: min-content;
+}
+
+.picture-homepage {
+  aspect-ratio: 1/1;
+  object-fit: contain;
+  object-position: 50% 50%;
+  height: auto;
+  width: 32rem;
+}
+
+.description-homepage {
+  font-size: 1rem;
+}
+
+.picture-more-art {
+  aspect-ratio: 1/1;
+  object-fit: contain;
+  object-position: 50% 50%;
+  height: auto;
+  width: 20rem;
 }
 
 /* ---------- FORM ADMIN ARTIST CREATE ---------- */
