--- a/templates/bundles/TwigBundle/Exception/_base.html.twig
+++ b/templates/bundles/TwigBundle/Exception/_base.html.twig
@@ -1,7 +1,7 @@
 <div class="container mt-5 mb-5">
     <div class="row d-flex justify-content-center align-items-center">
         <div class="col-md-8 col-6 d-flex flex-column align-items-center">
-            <img class="error-cake img-fluid w-50" src="{{ asset('build/images/map.png') }}"
+            <img class="error-cake img-fluid w-50" src="{{ asset('build/images/error.png') }}"
                  alt="Erreur sur la page">
             <h1 class="text-danger mt-5 text-center">Erreur {{ errorNumber }}</h1>
             <h3 class="text-secondary mb-4 text-center">{{ errorType }}</h3>
