--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,35 +4,33 @@
 
 {% block body %}
 <div class="container-fluid">
-    <div class="row row-cols-2 align-items-center">
+    <div class="row">
         <div class="col-12 text-center">
             <h1>" {{ artCard.title }} "</h1>
+            <h2 class="fst-italic fs-4">{{ artCard.user.nickname }}</h2>
         </div>
-        <div class="col-12 text-center mb-5">
-            <h2 class="fst-italic fs-5">
-                par {{ artCard.user.nickname }}
-            </h2>
-        </div>
-        <div class="col d-flex justify-content-center">
+        <div class="col-12 col-lg-6 d-flex justify-content-center mb-5">
             <div class="art-homepage">
-                <img class="picture-homepage" src="{{ artCard.pictureArt }}">
+                <img class="picture-homepage mb-3" src="{{ artCard.pictureArt }}">
                 <p class="description-homepage">{{ artCard.description }}</p>
             </div>
         </div>
-        <div class="col">
-            <img class="img-fluid" src="{{ asset('build/images/placeholder/map.png') }}">
+        <div class="col-12 col-md-6 m-auto mb-5">
+            <img class="picture-homepage" src="{{ asset('build/images/placeholder/map.png') }}">
         </div>
-        <div class="col-12 my-5 text-center">
-            <h1>Découvrir d’autres oeuvres</h1>
-        </div>
-        {% for art in artCards %}
-        <div class="col-3 mt-5 d-flex justify-content-center">
-            <div class="art-homepage">
-                <img class="picture-more-art" src="{{ art.pictureArt }}">
-                <a class="btn btn-danger mt-3">Voir plus</a>
+        <div class="col-12 mt-lg-5">
+            <h1 class="text-center">
+                Découvrir d’autres oeuvres
+            </h1>
+            <div class="row mt-5">
+                {% for art in artCards %}
+                <div class="col-12 col-lg-3 my-5 d-flex flex-column align-items-center">
+                    <img class="img-fluid picture-more-art" src="{{ art.pictureArt }}">
+                    <a class="text-decoration-none text-white fs-1" href="{{ path('artCard_show', {id: art.id}) }}">{{ art.title }}</a>
+                </div>
+                {% endfor %}
             </div>
         </div>
-        {% endfor %}
     </div>
 </div>
 {% endblock %}
