add flash message and change redirection

--- a/templates/artCard/pending.html.twig
+++ b/templates/artCard/pending.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
     <div class="container-fluid container-lg mt-3">
         <div class="row justify-content-center">
+            {{ include ('components/_genericFlashMessage.html.twig') }}
             {% for artCard in artCards %}
                 <div class="card artist-card col-6 col-md-4 d-flex flex-column  p-1 p-lg-2">
                     <img class="card-img img-fluid img-thumbnail bg-black"
