--- a/templates/artCard/showPending.html.twig
+++ b/templates/artCard/showPending.html.twig
@@ -7,6 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
+                {{ include ('components/_genericFlashMessage.html.twig') }}
                 <div class="show-card-detail card float-right">
                     <div class="row">
                         <div class="col-sm-5">
