add marker on map

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,6 +18,10 @@
                 </div>
             </div>
             <div class="col-12 col-lg-6 d-flex justify-content-center">
+                <div hidden>
+                    <span id="longitude">{{ longitude }}</span>
+                    <span id="latitude">{{ latitude }}</span>
+                </div>
                 {{ include('components/_map.html.twig') }}
             </div>
         </div>
@@ -35,5 +39,6 @@
                 {% endfor %}
             </div>
         </div>
+    </div>
     </div>
 {% endblock %}
