delete useless var in return and and moved the initialization of the id variable outside the component

--- a/templates/artCard/show.html.twig
+++ b/templates/artCard/show.html.twig
@@ -3,6 +3,9 @@
 {% block title %} {{ artCard.title }} {% endblock %}
 
 {% block body %}
+    <script>
+        let id = {{ artCard.id }}
+    </script>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-3">
