--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,9 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
+    <script>
+        let id = {{ frontArt.id }}
+    </script>
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-3">
