--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,9 +3,7 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <script>
-        let id = {{ frontArt.id }}
-    </script>
+    <input type="hidden" value="{{ frontArt.id }}" id="getHomeArtId">
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-3">
